--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -243,7 +243,8 @@
             android:id="@+id/tv_rupelogo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/icons8_rupee_30"
+            android:drawableStart="@drawable/rupee_icon"
+            android:drawablePadding="5dp"
             android:gravity="center"
             android:text="INR"
             android:textColor="@color/white"
@@ -362,7 +363,8 @@
                 android:id="@+id/tv2_rupelogo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/icons8_rupee_30"
+                android:drawableStart="@drawable/rupee_icon"
+                android:drawablePadding="5dp"
                 android:gravity="center"
                 android:text="INR"
                 android:textColor="@color/white"
