--- a/app/src/main/res/drawable/bg_tv_fill_wrning.xml
+++ b/app/src/main/res/drawable/bg_tv_fill_wrning.xml
@@ -5,8 +5,8 @@
         android:bottomRightRadius="10dp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp" />
-    <solid android:color="#2C3840"/>
+    <solid android:color="#0DF35A38"/>
     <stroke
         android:width="1dp"
-        android:color="#7CA09D"/>
+        android:color="#0DF35A38"/>
 </shape>
