balance_information.xml

--- a/app/src/main/res/layout/adjust_leverage.xml
+++ b/app/src/main/res/layout/adjust_leverage.xml
@@ -36,7 +36,7 @@
         android:id="@+id/cl_realize_amt"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:background="@drawable/bg_tv_fill"
+        android:background="@drawable/bg_tv_fill_border"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -120,7 +120,7 @@
         android:id="@+id/cl_what_lev"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_tv_fill"
+        android:background="@drawable/bg_tv_fill_border"
         android:padding="10dp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
