--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -227,7 +227,7 @@
         android:layout_width="204dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/bg_tv_fill"
+        android:background="@drawable/bg_tv_fill_border"
         android:padding="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvHead_realize">
@@ -349,7 +349,7 @@
             android:layout_width="204dp"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/bg_tv_fill"
+            android:background="@drawable/bg_tv_fill_border"
             android:padding="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvHeading2">
