--- a/app/src/main/res/layout/margin_layout.xml
+++ b/app/src/main/res/layout/margin_layout.xml
@@ -33,13 +33,14 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_cross_margin" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
         android:paddingStart="30dp"
+        android:paddingTop="5dp"
         android:paddingEnd="30dp"
+        android:paddingBottom="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_margin_explained">
@@ -96,5 +97,14 @@
             app:layout_constraintTop_toTopOf="@+id/img_exchange_icon" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+        android:id="@+id/btn_margin_ok"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Okay"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
