--- a/app/src/main/res/layout/order_type.xml
+++ b/app/src/main/res/layout/order_type.xml
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="@drawable/bg_tv_fill"
+        android:background="@drawable/bg_tv_fill_border"
         android:padding="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,7 +91,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:background="@drawable/bg_tv_fill"
+            android:background="@drawable/bg_tv_fill_border"
             android:padding="15dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/cl_market_order"
