--- a/app/src/main/res/layout/order_value.xml
+++ b/app/src/main/res/layout/order_value.xml
@@ -7,12 +7,12 @@
     android:padding="15dp">
 
     <TextView
-        android:id="@+id/tv_cross_liquida"
+        android:id="@+id/tv_cross_ordr_val"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:drawableEnd="@drawable/icons8_cross_30"
         android:gravity="center|fill"
-        android:text="Liquidation Value"
+        android:text="Order Value"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,25 +20,25 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_liquida_explained"
+        android:id="@+id/tv_ordr_val_explained"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:layout_marginTop="10dp"
-        android:text="The liquidation level is the price at which the broker forcibly closes out a trader's position to prevent further losses. First, there's usually a warning in the form of a margin call to deposit more funds that haven't been met. The broker determines the threshold before a client begins trading in a margin account."
+        android:text="The order value is typically calculated by multiplying the quantity of a specific cryptocurrency being traded with its current market price. "
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_cross_liquida" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_cross_ordr_val" />
 
     <Button
-        android:id="@+id/btn_liquida_ok"
+        android:id="@+id/btn_margin_ok"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Okay"
         android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_liquida_explained" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_ordr_val_explained" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
