--- a/app/src/main/res/layout/margin_layout.xml
+++ b/app/src/main/res/layout/margin_layout.xml
@@ -41,6 +41,7 @@
         android:paddingTop="5dp"
         android:paddingEnd="30dp"
         android:paddingBottom="5dp"
+        android:background="@drawable/bg_tv_fill"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_margin_explained">
