--- a/app/src/main/res/layout/order_placement_pref.xml
+++ b/app/src/main/res/layout/order_placement_pref.xml
@@ -24,7 +24,7 @@
         android:id="@+id/tv_cross_ordrBook_pref"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:drawableEnd="@drawable/icons8_cross_30"
+        android:drawableEnd="@drawable/cross_icon"
         android:gravity="center|fill"
         android:text="Orderbook Preference"
         android:textColor="@color/white"
