--- a/app/src/main/res/drawable/bg_tv_fill_border.xml
+++ b/app/src/main/res/drawable/bg_tv_fill_border.xml
@@ -5,7 +5,7 @@
         android:bottomRightRadius="10dp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp" />
-    <solid android:color="#2C3840"/>
+    <solid android:color="#181F23"/>
     <stroke
         android:width="1dp"
         android:color="#7CA09D"/>
