--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:id="@+id/tv_cross_set_pl"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:drawableEnd="@drawable/icons8_cross_30"
+        android:drawableEnd="@drawable/cross_icon"
         android:gravity="center|fill"
         android:text="Set Take-Profit/Stop Loss"
         android:textColor="@color/white"
@@ -26,9 +26,9 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:drawableStart="@drawable/icons8_bitcoin_30"
+        android:drawableStart="@drawable/btc"
         android:gravity="center|fill"
-        android:text="BTC-INR"
+        android:text=" BTC-INR"
         android:textColor="@color/white"
         android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
