--- a/app/src/main/res/layout/coin_info.xml
+++ b/app/src/main/res/layout/coin_info.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tv_cross_coin_info"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:drawableEnd="@drawable/icons8_cross_30"
+        android:drawableEnd="@drawable/cross_icon"
         android:gravity="center|fill"
         android:text="Coin Info"
         android:textColor="@color/white"
@@ -32,7 +32,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:padding="15dp"
         android:background="@drawable/bg_tv_only_border"
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Rank 1"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="15dp"
             android:textColor="#89A0AE"
             app:layout_constraintEnd_toEndOf="@+id/tv_btcoin_tittle"
             app:layout_constraintStart_toStartOf="@+id/tv_btcoin_tittle"
@@ -56,9 +56,9 @@
             android:id="@+id/tv_btcoin_tittle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/icons8_bitcoin_30"
+            android:drawableStart="@drawable/btc"
             android:gravity="center|fill"
-            android:text="Bitcoin"
+            android:text=" Bitcoin "
             android:textColor="#DBE7FF"
             android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="parent"
