--- a/app/src/main/res/layout/liquidation_value.xml
+++ b/app/src/main/res/layout/liquidation_value.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tv_cross_liquida"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:drawableEnd="@drawable/icons8_cross_30"
+        android:drawableEnd="@drawable/cross_icon"
         android:gravity="center|fill"
         android:text="Liquidation Value"
         android:textColor="@color/white"
