--- a/app/src/main/res/layout/order_summary.xml
+++ b/app/src/main/res/layout/order_summary.xml
@@ -25,7 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="15dp"
-        android:background="#181F23"
+        android:background="#33424B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_cross_coin_info" />
