--- a/app/src/main/res/layout/adjust_leverage.xml
+++ b/app/src/main/res/layout/adjust_leverage.xml
@@ -164,10 +164,11 @@
 
     <Button
         android:id="@+id/btnConfirm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
         android:textColor="@color/white"
         android:text="Confirm"
+        android:theme="@style/solid_button"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
