--- a/app/src/main/res/layout/depositing_amount.xml
+++ b/app/src/main/res/layout/depositing_amount.xml
@@ -133,6 +133,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:text="Go Back"
+        android:theme="@style/outlined_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnConfirm_depo_amt"
         app:layout_constraintStart_toStartOf="parent"
@@ -143,6 +144,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:text="Confirm"
+        android:theme="@style/solid_button"
         app:layout_constraintBottom_toBottomOf="@+id/btnGoBack_depo_amt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnGoBack_depo_amt"
