--- a/app/src/main/res/layout/funding_rate.xml
+++ b/app/src/main/res/layout/funding_rate.xml
@@ -427,9 +427,10 @@
             <Button
                 android:id="@+id/btn_fund_rate_ok"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_margin="20dp"
                 android:text="Okay"
+                android:theme="@style/solid_button"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
