--- a/app/src/main/res/layout/go_back_sheet.xml
+++ b/app/src/main/res/layout/go_back_sheet.xml
@@ -101,6 +101,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:text="Go To Wallet"
+        android:theme="@style/outlined_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnWait_goBackSheet"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,6 +112,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:text="Wait"
+        android:theme="@style/solid_button"
         app:layout_constraintBottom_toBottomOf="@+id/btnGoWallet_GoBacksheet"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnGoWallet_GoBacksheet"
