--- a/app/src/main/res/layout/orderbook_preference.xml
+++ b/app/src/main/res/layout/orderbook_preference.xml
@@ -145,11 +145,12 @@
     <Button
         android:id="@+id/btn_ordr_pref_confirm"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:text="Confirm"
         android:layout_marginTop="30dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
+        android:theme="@style/solid_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cl_ordr_pref_val" />
