--- a/app/src/main/res/layout/step2_of2.xml
+++ b/app/src/main/res/layout/step2_of2.xml
@@ -93,10 +93,10 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:text="Go to wallet"
+        android:theme="@style/outlined_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+        app:layout_constraintStart_toStartOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
