--- a/app/src/main/res/layout/balance_information.xml
+++ b/app/src/main/res/layout/balance_information.xml
@@ -209,8 +209,9 @@
     <Button
         android:id="@+id/btn_bal_info_ok"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:text="Okay"
+        android:theme="@style/solid_button"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
