--- a/app/src/main/res/layout/deposit_amount.xml
+++ b/app/src/main/res/layout/deposit_amount.xml
@@ -271,9 +271,10 @@
     <Button
         android:id="@+id/btn_margin_ok"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_margin="15dp"
         android:text="Okay"
+        android:theme="@style/solid_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
