--- a/app/src/main/res/layout/margin_layout.xml
+++ b/app/src/main/res/layout/margin_layout.xml
@@ -102,8 +102,10 @@
     <Button
         android:id="@+id/btn_margin_ok"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:text="Okay"
+        android:theme="@style/solid_button"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
