--- a/app/src/main/res/layout/order_placement_pref.xml
+++ b/app/src/main/res/layout/order_placement_pref.xml
@@ -163,10 +163,12 @@
     <Button
         android:id="@+id/btn_ordr_pref_confirm"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:text="Confirm"
+        android:layout_marginTop="20dp"
+        android:theme="@style/solid_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_ordrbook_info" />
