--- a/app/src/main/res/layout/order_value.xml
+++ b/app/src/main/res/layout/order_value.xml
@@ -34,8 +34,9 @@
     <Button
         android:id="@+id/btn_margin_ok"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:text="Okay"
+        android:theme="@style/solid_button"
         android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
