--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#04312D"
+            android:background="#181F23"
             android:padding="5dp">
 
             <TextView
@@ -259,15 +259,48 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ImageView
-        android:id="@+id/img_graph"
+    <SeekBar
+        android:id="@+id/seekBar1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/graph_img"
         android:layout_marginTop="15dp"
+        android:max="50"
+        android:progress="0"
+        android:outlineSpotShadowColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/cl_realize_amt"
         app:layout_constraintStart_toStartOf="@+id/cl_realize_amt"
         app:layout_constraintTop_toBottomOf="@+id/cl_realize_amt" />
+
+    <TextView
+        android:id="@+id/tv_0percent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0%"
+        android:textColor="#EBF1FF"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@+id/seekBar1"
+        app:layout_constraintTop_toBottomOf="@+id/seekBar1" />
+
+    <TextView
+        android:id="@+id/tv_10percent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="10%"
+        android:textColor="#EBF1FF"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@+id/seekBar1"
+        app:layout_constraintStart_toStartOf="@+id/seekBar1"
+        app:layout_constraintTop_toBottomOf="@+id/seekBar1" />
+
+    <TextView
+        android:id="@+id/tv_50percent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="50%"
+        android:textColor="#EBF1FF"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@+id/seekBar1"
+        app:layout_constraintTop_toTopOf="@+id/tv_10percent" />
 
     <LinearLayout
         android:layout_width="204dp"
@@ -323,7 +356,7 @@
         android:background="#616161"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_graph" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_10percent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout4"
@@ -341,6 +374,7 @@
             android:layout_height="wrap_content"
             android:text="Price at which you want to "
             android:textColor="#B3B3B3"
+            android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -350,6 +384,7 @@
             android:layout_height="wrap_content"
             android:text="Limit Losses."
             android:textColor="@color/white"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/tvHeading2"
             app:layout_constraintStart_toEndOf="@+id/tvHeading2"
             app:layout_constraintTop_toTopOf="@+id/tvHeading2" />
@@ -358,7 +393,7 @@
             android:id="@+id/constraintLayout3"
             android:layout_width="204dp"
             android:layout_height="50dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/bg_tv_fill_border"
             android:padding="10dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -390,6 +425,48 @@
                 app:layout_constraintTop_toTopOf="@+id/amount2" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <SeekBar
+            android:id="@+id/seekBar2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:max="50"
+            android:progress="0"
+            app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
+            app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />
+
+        <TextView
+            android:id="@+id/tv_0percent1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0%"
+            android:textColor="#EBF1FF"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@+id/seekBar2"
+            app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
+
+        <TextView
+            android:id="@+id/tv_10percent1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="10%"
+            android:textColor="#EBF1FF"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="@+id/seekBar2"
+            app:layout_constraintStart_toStartOf="@+id/seekBar2"
+            app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
+
+        <TextView
+            android:id="@+id/tv_50percent1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="50%"
+            android:textColor="#EBF1FF"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="@+id/seekBar2"
+            app:layout_constraintTop_toTopOf="@+id/tv_10percent1" />
 
         <LinearLayout
             android:layout_width="wrap_content"
